--- a/html/mega.html
+++ b/html/mega.html
@@ -29,7 +29,11 @@
   </div>
   
   <p class="message cloneable"></p>
-  <audio controls class='gameaudio hide'><source src='https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ATLdnhO2Xo.mp3'></audio>
+  <audio controls class='gameaudio hide'>
+    <source src='./media/und_megalo.ogg'>
+    <source src='https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ATLdnhO2Xo.mp3'>
+    
+  </audio>
   <img src="./img/sans_head.png" class="note cloneable" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="./js/origin.js"></script>
