--- a/html/mega.html
+++ b/html/mega.html
@@ -27,6 +27,7 @@
   <div class="result hide">
       <span class="score"></span>
   </div>
+  <img class="startbutton hide" src="./img/heart_transparent.png"/>
   
   <p class="message cloneable"></p>
   <audio controls class='gameaudio hide'>
