--- a/html/mega.html
+++ b/html/mega.html
@@ -37,6 +37,7 @@
   </audio>
   <img src="./img/sans_head.png" class="note cloneable" />
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="./js/ismobile.min.js"></script>
   <script src="./js/origin.js"></script>
   <script src="./js/megalovania.js"></script>
   <sriprt src="https://hammerjs.github.io/dist/hammer.min.js"></sriprt>
