--- a/html/mega.html
+++ b/html/mega.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./css/megalovania.css"></rel>
   <title>Document</title>
@@ -30,7 +30,7 @@
   <img class="startbutton hide" src="./img/heart_transparent.png"/>
   
   <p class="message cloneable"></p>
-  <audio controls class='gameaudio hide'>
+  <audio class='gameaudio hide'>
     <source src='./media/und_megalo.ogg'>
     <source src='./survey/media/und_megalo.ogg'>
     <source src='https://s1.vocaroo.com/media/download_temp/Vocaroo_s1ATLdnhO2Xo.mp3'>
